--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Sujit Kumar Kamaraj
-logo: /assets/img/headshot.jpg
+logo: /assets/img/headshot.png
 description: sujitkumar20501 [at] gmail [dot] com
 theme: jekyll-theme-minimal
