--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Sujit K Kamaraj
-logo: /assets/img/profilepic.jpg
+#logo: /assets/img/profilepic.jpg
 description: sujitkumar20501 [at] gmail [dot] com
 theme: jekyll-theme-minimal
